--- a/Deeray_test.ipynb
+++ b/Deeray_test.ipynb
@@ -13,8 +13,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "1db45ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandoc\n",
+      "  Downloading pandoc-2.3.tar.gz (33 kB)\n",
+      "Collecting plumbum\n",
+      "  Downloading plumbum-1.8.1-py3-none-any.whl (126 kB)\n",
+      "Collecting ply\n",
+      "  Downloading ply-3.11-py2.py3-none-any.whl (49 kB)\n",
+      "Requirement already satisfied: pywin32 in c:\\users\\theli\\anaconda3\\lib\\site-packages (from plumbum->pandoc) (302)\n",
+      "Building wheels for collected packages: pandoc\n",
+      "  Building wheel for pandoc (setup.py): started\n",
+      "  Building wheel for pandoc (setup.py): finished with status 'done'\n",
+      "  Created wheel for pandoc: filename=pandoc-2.3-py3-none-any.whl size=33281 sha256=deb83c11c2c6a65debda37ef46d635d4bcda14d61d0f7cc71fd7a6d00c5977c3\n",
+      "  Stored in directory: c:\\users\\theli\\appdata\\local\\pip\\cache\\wheels\\69\\e6\\a1\\1daa96d919c9e09a71473649b717b8da286f3f8d7719d1cfc5\n",
+      "Successfully built pandoc\n",
+      "Installing collected packages: ply, plumbum, pandoc\n",
+      "Successfully installed pandoc-2.3 plumbum-1.8.1 ply-3.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandoc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "a6012b4b",
+   "id": "a7341729",
    "metadata": {},
    "outputs": [
     {
@@ -3323,7 +3355,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b7afe9a6",
+   "id": "70b982e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3386,7 +3418,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "87624227",
+   "id": "beb48809",
    "metadata": {
     "scrolled": true
    },
@@ -3425,7 +3457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2bee095",
+   "id": "4409939b",
    "metadata": {},
    "source": [
     "CPU times: total: 10.8 s\n",
@@ -3478,7 +3510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9004dcb",
+   "id": "dd0b1f73",
    "metadata": {},
    "source": [
     "### Обучение модели"
@@ -3487,7 +3519,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2aa4888d",
+   "id": "dbb90dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3498,7 +3530,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "054e1374",
+   "id": "ee0e580c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3552,7 +3584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d61a6810",
+   "id": "8e7427ef",
    "metadata": {},
    "source": [
     "Лучшие параметры {'clf__C': 10, 'clf__class_weight': 'balanced'}\n",
@@ -3567,7 +3599,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a89a032f",
+   "id": "19d99166",
    "metadata": {
     "scrolled": true
    },
@@ -3611,7 +3643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8464fff",
+   "id": "a960a0d2",
    "metadata": {},
    "source": [
     "Лучшие параметры {'clf__learning_rate': 0.15, 'clf__max_depth': 8, 'clf__n_estimators': 150}\n",
@@ -3625,7 +3657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98e8297",
+   "id": "bfb8c0f2",
    "metadata": {},
    "source": [
     "### Тестирование модели"
@@ -3634,7 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6b5c776e",
+   "id": "a2047f36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3651,7 +3683,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "272ba973",
+   "id": "86ff9b6f",
    "metadata": {},
    "outputs": [
     {
@@ -3675,7 +3707,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "64829cf4",
+   "id": "39d12b1e",
    "metadata": {},
    "outputs": [
     {
@@ -3697,7 +3729,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "83b476e4",
+   "id": "0232144c",
    "metadata": {},
    "outputs": [
     {
@@ -3718,7 +3750,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "02bd8768",
+   "id": "c091a4d7",
    "metadata": {},
    "outputs": [
     {
@@ -3748,7 +3780,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7b8b5144",
+   "id": "f74b4a46",
    "metadata": {},
    "outputs": [
     {
@@ -3776,7 +3808,227 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a59c32",
+   "id": "338eb62d",
+   "metadata": {},
+   "source": [
+    "### Предсказание позитивных коментариев на тестовой выборке"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "4b6d198e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probabilities_test = lr_m.predict_proba(X_test)\n",
+    "#probabilities_one_test = probabilities_test[:, 1]\n",
+    "\n",
+    "# нахожу индексы клиетов кто выше порога и вероятность того, что коментарии позитивный\n",
+    "positiv_indices = np.where(probabilities_test[:, 1] > 0.7)\n",
+    "\n",
+    "positiv_indices = data.iloc[churn_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "69ba31f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID отзыва</th>\n",
+       "      <th>Дата</th>\n",
+       "      <th>Номенклатура</th>\n",
+       "      <th>Количество звезд</th>\n",
+       "      <th>Бренд</th>\n",
+       "      <th>Текст отзыва</th>\n",
+       "      <th>Имя</th>\n",
+       "      <th>Регион</th>\n",
+       "      <th>Цвет</th>\n",
+       "      <th>Размер</th>\n",
+       "      <th>...</th>\n",
+       "      <th>общая_полезность</th>\n",
+       "      <th>полезность_pct</th>\n",
+       "      <th>первый_отзыв</th>\n",
+       "      <th>words_count</th>\n",
+       "      <th>lenght_com</th>\n",
+       "      <th>сom_type</th>\n",
+       "      <th>причина</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>категория_полезности</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3923</th>\n",
+       "      <td>9998.0</td>\n",
+       "      <td>2020-08-04</td>\n",
+       "      <td>Артикул 879</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Бренд 8</td>\n",
+       "      <td>класс очень красиво\\n</td>\n",
+       "      <td>Елена</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>белый</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-08-04</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Супер</td>\n",
+       "      <td>нет жалоб</td>\n",
+       "      <td>Женский</td>\n",
+       "      <td>E</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3921</th>\n",
+       "      <td>9994.0</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>Артикул 475</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Бренд 53</td>\n",
+       "      <td>приходить быстро  не вскрывать  брать за      рубль  дешевый чем в закупка вк \\n</td>\n",
+       "      <td>Наталья</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>горчичный</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>13</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Супер</td>\n",
+       "      <td>нет жалоб</td>\n",
+       "      <td>Женский</td>\n",
+       "      <td>E</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3920</th>\n",
+       "      <td>9993.0</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>Артикул 3108</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Бренд 10</td>\n",
+       "      <td>цвет не серо  голубой а близко к серо  зеленый  \\n</td>\n",
+       "      <td>Ирина</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>серо-голубой</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>9</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Супер</td>\n",
+       "      <td>нет жалоб</td>\n",
+       "      <td>Женский</td>\n",
+       "      <td>E</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3922</th>\n",
+       "      <td>9995.0</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>Артикул 3388</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Бренд 10</td>\n",
+       "      <td>цвет немного отличаться  много с фиолетовый оттенок  плюс белый шерстинка придавать более бледный вид  а так пряжа м...</td>\n",
+       "      <td>Инна</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>пурпурный</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>22</td>\n",
+       "      <td>149</td>\n",
+       "      <td>Супер</td>\n",
+       "      <td>нет жалоб</td>\n",
+       "      <td>Женский</td>\n",
+       "      <td>E</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3915</th>\n",
+       "      <td>9978.0</td>\n",
+       "      <td>2020-08-06</td>\n",
+       "      <td>Артикул 347</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Бренд 56</td>\n",
+       "      <td>какой же он шикарный  край закругленный не острый  умеренный толщина  в рука держать приятно  смотреть еще приятно  ...</td>\n",
+       "      <td>Ольга</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>серебристый</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2020-08-06</td>\n",
+       "      <td>35</td>\n",
+       "      <td>226</td>\n",
+       "      <td>Супер</td>\n",
+       "      <td>нет жалоб</td>\n",
+       "      <td>Женский</td>\n",
+       "      <td>E</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID отзыва       Дата  Номенклатура  Количество звезд     Бренд                                                                                                             Текст отзыва      Имя Регион          Цвет  Размер  ...  общая_полезность  полезность_pct  первый_отзыв  words_count  lenght_com сom_type    причина   Gender категория_полезности target\n",
+       "3923     9998.0 2020-08-04   Артикул 879                 5   Бренд 8                                                                                                    класс очень красиво\\n    Елена     RU         белый     NaN  ...                 0             NaN    2020-08-04            3          19    Супер  нет жалоб  Женский                    E      1\n",
+       "3921     9994.0 2020-08-05   Артикул 475                 5  Бренд 53                                         приходить быстро  не вскрывать  брать за      рубль  дешевый чем в закупка вк \\n  Наталья     RU     горчичный     NaN  ...                 8            50.0    2020-08-05           13          75    Супер  нет жалоб  Женский                    E      1\n",
+       "3920     9993.0 2020-08-05  Артикул 3108                 5  Бренд 10                                                                       цвет не серо  голубой а близко к серо  зеленый  \\n    Ирина     RU  серо-голубой     NaN  ...                 4            50.0    2020-08-05            9          48    Супер  нет жалоб  Женский                    E      1\n",
+       "3922     9995.0 2020-08-05  Артикул 3388                 5  Бренд 10  цвет немного отличаться  много с фиолетовый оттенок  плюс белый шерстинка придавать более бледный вид  а так пряжа м...     Инна     RU     пурпурный     NaN  ...                 6           100.0    2020-08-05           22         149    Супер  нет жалоб  Женский                    E      1\n",
+       "3915     9978.0 2020-08-06   Артикул 347                 5  Бренд 56  какой же он шикарный  край закругленный не острый  умеренный толщина  в рука держать приятно  смотреть еще приятно  ...    Ольга     RU   серебристый     NaN  ...                 6           100.0    2020-08-06           35         226    Супер  нет жалоб  Женский                    E      1\n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positiv_indices.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "478887a7",
    "metadata": {},
    "source": [
     "### Выводы\n",
@@ -3793,8 +4045,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b3d1e5ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "b194f8b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Супер      652\n",
+       "Плохо      100\n",
+       "Хороший     69\n",
+       "Name: сom_type, dtype: int64"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "churn_clients['сom_type'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b5d835a3",
+   "id": "c7467c90",
    "metadata": {},
    "source": [
     "Частотность слов"
@@ -3803,7 +4087,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "584211f3",
+   "id": "a7aa7506",
    "metadata": {},
    "outputs": [
     {
