--- a/Deeray_test.ipynb
+++ b/Deeray_test.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "1db45ab7",
+   "id": "5f25e99a",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a7341729",
+   "id": "151401c3",
    "metadata": {},
    "outputs": [
     {
@@ -3355,7 +3355,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "70b982e7",
+   "id": "b008db77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3418,7 +3418,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "beb48809",
+   "id": "1c001029",
    "metadata": {
     "scrolled": true
    },
@@ -3457,7 +3457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4409939b",
+   "id": "4b1fe7b1",
    "metadata": {},
    "source": [
     "CPU times: total: 10.8 s\n",
@@ -3510,7 +3510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0b1f73",
+   "id": "5f22b26b",
    "metadata": {},
    "source": [
     "### Обучение модели"
@@ -3519,7 +3519,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "dbb90dc2",
+   "id": "1314cc29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3530,7 +3530,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ee0e580c",
+   "id": "8b7b3971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3584,7 +3584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7427ef",
+   "id": "3cffd8ea",
    "metadata": {},
    "source": [
     "Лучшие параметры {'clf__C': 10, 'clf__class_weight': 'balanced'}\n",
@@ -3599,7 +3599,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "19d99166",
+   "id": "fe9a0604",
    "metadata": {
     "scrolled": true
    },
@@ -3643,7 +3643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a960a0d2",
+   "id": "d5c7db11",
    "metadata": {},
    "source": [
     "Лучшие параметры {'clf__learning_rate': 0.15, 'clf__max_depth': 8, 'clf__n_estimators': 150}\n",
@@ -3657,7 +3657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfb8c0f2",
+   "id": "2ae994af",
    "metadata": {},
    "source": [
     "### Тестирование модели"
@@ -3666,7 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a2047f36",
+   "id": "973e0d2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3683,7 +3683,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "86ff9b6f",
+   "id": "75860687",
    "metadata": {},
    "outputs": [
     {
@@ -3707,7 +3707,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "39d12b1e",
+   "id": "7686acdd",
    "metadata": {},
    "outputs": [
     {
@@ -3729,7 +3729,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0232144c",
+   "id": "07a31cac",
    "metadata": {},
    "outputs": [
     {
@@ -3750,7 +3750,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c091a4d7",
+   "id": "64e1640c",
    "metadata": {},
    "outputs": [
     {
@@ -3780,7 +3780,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f74b4a46",
+   "id": "3457848e",
    "metadata": {},
    "outputs": [
     {
@@ -3808,7 +3808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "338eb62d",
+   "id": "27682a44",
    "metadata": {},
    "source": [
     "### Предсказание позитивных коментариев на тестовой выборке"
@@ -3817,7 +3817,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "4b6d198e",
+   "id": "14d0fc2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3832,8 +3832,133 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "51bd2750",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.358094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.981124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.923835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.915332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.984118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1173</th>\n",
+       "      <td>3464.0</td>\n",
+       "      <td>0.956041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1174</th>\n",
+       "      <td>3465.0</td>\n",
+       "      <td>0.985567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1175</th>\n",
+       "      <td>3467.0</td>\n",
+       "      <td>0.293829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1176</th>\n",
+       "      <td>3471.0</td>\n",
+       "      <td>0.993871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1177</th>\n",
+       "      <td>3472.0</td>\n",
+       "      <td>0.885545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1178 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID     score\n",
+       "0        4.0  0.358094\n",
+       "1        7.0  0.981124\n",
+       "2        8.0  0.923835\n",
+       "3       21.0  0.915332\n",
+       "4       23.0  0.984118\n",
+       "...      ...       ...\n",
+       "1173  3464.0  0.956041\n",
+       "1174  3465.0  0.985567\n",
+       "1175  3467.0  0.293829\n",
+       "1176  3471.0  0.993871\n",
+       "1177  3472.0  0.885545\n",
+       "\n",
+       "[1178 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = data[\"ID отзыва\"] \n",
+    "\n",
+    "\n",
+    "indices = np.where(probabilities_test[:, 1])\n",
+    "indices = np.squeeze(indices)  \n",
+    "scores = pd.DataFrame({'ID': ids[indices], 'score': probabilities_test[indices, 1]})\n",
+    "\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
-   "id": "69ba31f5",
+   "id": "d2f3af18",
    "metadata": {},
    "outputs": [
     {
@@ -4028,7 +4153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "478887a7",
+   "id": "bef8f9d0",
    "metadata": {},
    "source": [
     "### Выводы\n",
@@ -4047,7 +4172,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b3d1e5ac",
+   "id": "41199f5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4055,7 +4180,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "b194f8b7",
+   "id": "f217889e",
    "metadata": {},
    "outputs": [
     {
@@ -4078,7 +4203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7467c90",
+   "id": "b8c2751d",
    "metadata": {},
    "source": [
     "Частотность слов"
@@ -4087,7 +4212,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "a7aa7506",
+   "id": "e47c1eba",
    "metadata": {},
    "outputs": [
     {
